--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "node-sass": "^4.12.0",
+    "push-dir": "^0.4.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
